--- a/index.html
+++ b/index.html
@@ -19,39 +19,62 @@
     id="logo"
 
   ></svg>
-  <nav class="hidden sm:flex">
-    <ul class="flex list-none gap-6">
-      <li>
+  <div
+    id="header__bg-mobile"
+    class="hidden fixed inset-0 bg-(--background-mobile-menu) z-10"
+  ></div>
+  <nav
+    id="header__nav"
+    class=" fixed bg-white top-0 right-0 w-1/2 h-screen p-4 z-20 animation translate-x-full
+    sm:flex sm:static sm:bg-transparent sm:w-auto sm:h-auto sm:p-0 sm:-translate-x-0"
+  >
+    <button
+      class="flex justify-end w-full pb-4 sm:hidden"
+      type="button"
+      aria-label="Close menu"
+    >
+      <svg id="close"></svg>
+    </button>
+    <ul
+      class="flex flex-col list-none gap-6
+      sm:flex-row sm:p-0 sm:gap-6"
+    >
+      <li class="header__link animation scale">
         <a
+          class=" "
           href="#"
         >
           Men
         </a>
       </li>
-      <li>
+      <li class="header__link animation scale">
         <a
-          href="/"
+          class=""
+          href="#"
         >
           Women
         </a>
       </li>
-      <li>
+      <li class="header__link animation scale">
         <a
-          href="/"
+          class=""
+          href="#"
         >
           Kids
         </a>
       </li>
-      <li>
+      <li class="header__link animation scale">
         <a
-          href="/"
+          class=""
+          href="#"
         >
           Jordan
         </a>
       </li>
-      <li>
+      <li class="header__link animation scale">
         <a
-          href="/"
+          class=""
+          href="#"
         >
           Sale
         </a>
@@ -76,9 +99,9 @@
   </div>
 </header>
 <main
-  class="grid grid-cols-1 mt-10 pb-12 px-4 gap-3
+  class="grid grid-cols-1 justify-center mt-10 pb-12 px-4 gap-3
   sm:grid-cols-[auto_1fr] sm:grid-rows-[auto_1fr]
-  lg:gap-6 lg:max-xl:grid-cols-[1fr_auto]"
+  lg:gap-6 lg:max-xl:grid-cols-[1fr_auto] 2xl:grid-cols-[auto_auto]"
 >
   <!--  Title Section -->
   <section
@@ -104,29 +127,38 @@
       after:py-1 after:pl-2 after:pr-3 after:bg-white after:rounded-full'
     >
       <img
-        class="image-width animation"
-        src="src/images/image_white_1.png"
+        class="image-width"
+        src="/images/image_white_1.png"
         alt="Shoes photo"
         loading="lazy"
+        fetchpriority="high"
+        width="684"
+        height="684"
       />
     </figure>
     <img
-      class="image-width animation"
-      src="src/images/image_white_2.png"
+      class="image-width"
+      src="/images/image_white_2.png"
       alt="Shoes photo"
       loading="lazy"
+      width="684"
+      height="684"
     />
     <img
-      class="image-width animation"
-      src="src/images/image_white_3.png"
+      class="image-width"
+      src="/images/image_white_3.png"
       alt="Shoes photo"
       loading="lazy"
+      width="684"
+      height="684"
     />
     <img
-      class="image-width animation"
-      src="src/images/image_white_4.png"
+      class="image-width"
+      src="/images/image_white_4.png"
       alt="Shoes photo"
       loading="lazy"
+      width="684"
+      height="684"
     />
   </section>
   <!--  Info, size and buttons section -->
@@ -137,24 +169,26 @@
     <!--    Choose color -->
     <div class="flex gap-2">
       <button
-        class="cursor-pointer"
+        id="white-color"
+        class="cursor-pointer active-color"
         type="button"
         aria-label="Choose white color"
       >
         <img
-          class="w-13 active-color "
-          src="src/images/image_white_1.png"
+          class="w-13 rounded-sm"
+          src="/images/image_white_1.png"
           alt="White shoe"
         />
       </button>
       <button
+        id="black-color"
         class="cursor-pointer"
         type="button"
         aria-label="Choose black color"
       >
         <img
-          class="w-13 "
-          src="./src/images/image_black_1.png"
+          class="w-13 rounded-sm"
+          src="/images/image_black_1.png"
           alt="Black shoe"
         />
       </button>
@@ -168,6 +202,8 @@
           active:border-b-neutral-500
           hover:md:border-b-neutral-500"
           href="https://www.salomon.com/en-us/sizingchart"
+          target="_blank"
+          rel="noopener noreferrer"
         >
           Size Guide
         </a>
@@ -181,15 +217,18 @@
       <button
         class="button bg-(--black-button) text-white"
         type="button"
+        aria-label="Add to Bag"
       >
         Add to Bag
       </button>
       <button
+        id="button__favorite"
         class="button flex justify-center relative gap-1 items-center"
         type="button"
+        aria-label="Add to Favorite"
       >
         <span>Favorite</span>
-        <svg id="favorite__button"></svg>
+        <svg id="favorite__button_svg"></svg>
       </button>
     </section>
     <section class="flex flex-col gap-7">
@@ -231,7 +270,7 @@
 <!--____________________________________________________________________-->
 <script
   type="module"
-  src="/src/main.js"
+  src="./src/main.js"
 ></script>
 </body>
 </html>
