--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     content="width=device-width, initial-scale=1.0"
   />
   <title>nike-shoes-page</title>
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="apple-touch-icon.png"
+  >
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="favicon-32x32.png"
+  >
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="favicon-16x16.png"
+  >
+  <link
+    rel="manifest"
+    href="/site.webmanifest"
+  >
 </head>
 <body class="font-display text-xs">
 
@@ -128,7 +149,7 @@
     >
       <img
         class="image-width"
-        src="/images/image_white_1.png"
+        src="images/image_white_1.png"
         alt="Shoes photo"
         loading="lazy"
         fetchpriority="high"
@@ -138,7 +159,7 @@
     </figure>
     <img
       class="image-width"
-      src="/images/image_white_2.png"
+      src="images/image_white_2.png"
       alt="Shoes photo"
       loading="lazy"
       width="684"
@@ -146,7 +167,7 @@
     />
     <img
       class="image-width"
-      src="/images/image_white_3.png"
+      src="images/image_white_3.png"
       alt="Shoes photo"
       loading="lazy"
       width="684"
@@ -154,7 +175,7 @@
     />
     <img
       class="image-width"
-      src="/images/image_white_4.png"
+      src="images/image_white_4.png"
       alt="Shoes photo"
       loading="lazy"
       width="684"
@@ -176,7 +197,7 @@
       >
         <img
           class="w-13 rounded-sm"
-          src="/images/image_white_1.png"
+          src="images/image_white_1.png"
           alt="White shoe"
         />
       </button>
@@ -188,7 +209,7 @@
       >
         <img
           class="w-13 rounded-sm"
-          src="/images/image_black_1.png"
+          src="images/image_black_1.png"
           alt="Black shoe"
         />
       </button>
